--- a/main.tex
+++ b/main.tex
@@ -667,6 +667,8 @@
             De hecho, al hacer uso de herramientas que permiten obtener visualizaciones o gráficos (histogramas) a partir de los datos podemos apoyarnos de los mismos para ver qué distribuciones tienen las variables aleatorias involucradas.
             
             Sin embargo, en esta sección solo se presentan los gráficos y tablas sin recurrir a la interpretación de resultados.
+
+            Todos los archivos de datos y visualizaciones se encuentran en el repositorio de \textit{GitHub} \cite{Report:Origin}.
             \newpage
             \section{Tipo de sesión}
                 
