--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -67,6 +67,6 @@
 @misc{Report:Origin,
   author = {OneDividedByX},
   year   = {2025},
-  title  = {Github Repositories},
+  title  = {GitHub Repositories},
   url    = {https://github.com/OneDividedByX/EDA---Registered-Attendants/tree/main/Sources/Data}
 }
