--- a/main.tex
+++ b/main.tex
@@ -668,7 +668,7 @@
             
             Sin embargo, en esta sección solo se presentan los gráficos y tablas sin recurrir a la interpretación de resultados.
 
-            Todos los archivos de datos y visualizaciones se encuentran en el repositorio de \textit{GitHub} \cite{Report:Origin}.
+            Se resalta el hecho de que todos los archivos de datos y visualizaciones se encuentran en el repositorio de \textit{GitHub} \cite{Report:Origin}.
             \newpage
             \section{Tipo de sesión}
                 
@@ -1011,6 +1011,7 @@
 
                 \begin{observacion}
                     Dado que $\mathcal{I}$ y $\mathcal{A}$ presentan múltiples combinaciones de $n$ y $a$ para evaluar la estimación de $\Prob{\mathcal{I}=n\mid \mathcal{A}=a}$, se descarta mostrar una tabla que muestre explícitamente las aproximaciones. Por lo tanto, nos contentamos con el estudio de la correlación y la normalidad.
+                    Sin embargo, esta tabla se puede encontrar en el repositorio de \textit{GitHub} \cite{Report:Origin} en el archivo $\mathsf{.ipynb}$.
                 \end{observacion}
         \section{Duración de las sesiones}
             El motivo de agrupar en intervalos de $8\,\textup{min}$ es porque si buscaramos partir en $9$ subintervalos los intervalos $[0;45]$ y $[0;90]$, los intervalos tendrían longitud $5\,\textup{min}$ y $10\,\textup{min}$ respectivamente, por lo que para evitar el tener que utilizar intervalos de longitud diferentes se toman intervalos que resulten del promedio aproximado de los mismos que es $7.5\,\textup{min}\approx8\,\textup{min}$.
