changes on Introduccion

--- a/main.tex
+++ b/main.tex
@@ -328,7 +328,10 @@
         La empresa Universidad Tecnológica del Perú se dedica a formar profesionales en áreas como ingeniería, arquitectura, ciencias de la salud, ciencias sociales y ciencias de la comunicación.
         
         En particular, la sede en cuestión a tratar (\textit{UTP - Lima Centro}) está localizada en \textit{Av. Arequipa 265, Lima 15046}.
-        
+
+        El trabajo de practicante pre-profesional corresponde al de \textit{Tutor} en la Universidad Tecnológica del Perú y tiene como función el dictado de clases de reforzamiento en cursos de matemática a los estudiantes de la misma. Esto beneficia a los estudiantes de la sede \textit{UTP - Lima Centro} (presencial) y a estudiantes de las diferentes sedes del país (virtual).
+
+        La permanencia en el cargo de Tutor es determinada por la institución según el cumplimiento del reglamento y la calificación de satisfacción que los estudiantes asignan al Tutor de turno en las sesiones mediante encuestas.
     \chapter*{Antecedentes}\addcontentsline{toc}{chapter}{Antecedentes}
         En la Universidad Tecnológica del Perú, en vista de la necesidad de brindar apoyo académico a los estudiantes en cursos de matemática o física se realizan sesiones extracurriculares para todos los estudiantes que se clasifican en \textit{talleres} y \textit{tutorías}. Las sesiones son no obligatorias, por lo que los estudiantes pueden optar por inscribirse o no a este tipo de actividad y, estando inscritos, pueden o no optar por asistir. Estas sesiones pueden ser dictadas en forma \textit{presencial} o \textit{virtual} (mediante la plataforma \textbf{\textit{Zoom}}).
         
