4th conclusion mod

--- a/main.tex
+++ b/main.tex
@@ -1043,7 +1043,16 @@
             \item Se asignan equitativamente sesiones de tutoría y taller.
             \item La cantidad de inscritos y participantes en talleres es mayor a la cantidad de inscritos y participantes en tutorías.
             \item El número de asistentes presenta una correlación lineal positiva fuerte con el número de inscritos.
-            \item Se espera que de una cantidad de alumnos inscritos en cualquier tipo o curso, aproximadamente el $70\%$ de ellos asistan a la misma.
+            \item Se espera que de una cantidad de alumnos inscritos en cualquier tipo o curso, aproximadamente el $70\%$ de ellos asistan a la misma. Más específicamente, se espera que de cierta cantidad de inscritos a una sesión
+            \begin{enumerate}
+                \item en el curso de Matemática I aproximadamente el $72.7\%$ de ellos asistan a la misma;
+                \item en el curso de Matemática II aproximadamente el $70.7\%$ de ellos asistan a la misma;
+                \item en el curso de Cálculo I aproximadamente el $71.0\%$ de ellos asistan a la misma;
+                \item en el curso de Cálculo II aproximadamente el $67.7\%$ de ellos asistan a la misma;
+                \item en el curso de Estadística Descriptiva aproximadamente el $51.4\%$ de ellos asistan a la misma;
+                \item en el curso de Geometría aproximadamente el $69.6\%$ de ellos asistan a la misma;
+                \item en el curso de Matemática para Medicina aproximadamente el $40.9\%$ de ellos asistan a la misma.
+            \end{enumerate}
             \item La duración de las sesiones en talleres suele ser la máxima establecida, mientras que en las tutorías suele ser la media.
             \item La puntualidad mantiene su distribución aproximadamente igual en talleres y tutorías.
         \end{enumerate}
