5th conclusion mod

--- a/main.tex
+++ b/main.tex
@@ -1053,7 +1053,7 @@
                 \item en el curso de Geometría aproximadamente el $69.6\%$ de ellos asistan a la misma;
                 \item en el curso de Matemática para Medicina aproximadamente el $40.9\%$ de ellos asistan a la misma.
             \end{enumerate}
-            \item La duración de las sesiones en talleres suele ser la máxima establecida, mientras que en las tutorías suele ser la media.
+            \item La duración de las sesiones en talleres suele ser la máxima establecida ($90\,\textup{min}$), mientras que en las tutorías suele ser la mitad de su máxima establecida ($20\,\textup{min}$).
             \item La puntualidad mantiene su distribución aproximadamente igual en talleres y tutorías.
         \end{enumerate}
     \chapter{Anexos}
